// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/store/View/ViewDialog default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1006;"
  >
    <div
      aria-labelledby="pv_id_1_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1007;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_1_header"
        >
          Créer une nouvelle vue
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 60vh;"
      >
        <div
          class="p-field"
        >
          <label
            for="viewTextField"
          >
            
      Nom
          </label>
           
          <input
            class="p-inputtext p-component"
            id="viewTextField"
          />
        </div>
         
        <div
          class="p-field"
        >
          <label
            for="viewLockedField"
          >
            
      Verrouillée
          </label>
           
          <div
            class="p-button p-togglebutton p-component"
            id="viewLockedField"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="pi pi-unlock p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Déverrouillée
            </span>
            <span
              class="p-ink"
            />
          </div>
        </div>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Annuler
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Valider
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots components/store/View/ViewDialog update view 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1007;"
  >
    <div
      aria-labelledby="pv_id_2_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1008;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_2_header"
        >
          Modifier la vue
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
            <span
              class="p-ink"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 60vh;"
      >
        <div
          class="p-field"
        >
          <label
            for="viewTextField"
          >
            
      Nom
          </label>
           
          <input
            class="p-inputtext p-component p-filled"
            id="viewTextField"
          />
        </div>
         
        <div
          class="p-field"
        >
          <label
            for="viewLockedField"
          >
            
      Verrouillée
          </label>
           
          <div
            class="p-button p-togglebutton p-component"
            id="viewLockedField"
            role="checkbox"
            tabindex="0"
          >
            <span
              class="pi pi-unlock p-button-icon p-button-icon-right"
            />
             
            <span
              class="p-button-label"
            >
              Déverrouillée
            </span>
            <span
              class="p-ink"
            />
          </div>
        </div>
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Annuler
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Valider
          </span>
           
          <!---->
          <span
            class="p-ink"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
